--- a/idex.html
+++ b/idex.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-    <title>ALURAFLIX</title>
+    <title>METFLIS</title>
 </head>
 <body>
-    <header>HomeFlix</header>
+  <header>METFLIS</header>
+  <h1>uma nova historia ven ai. . . . </h1>
+  <p>#Filme de aventura</p>
 </body>
 </html>
